src/objects/EECRM_Project_Budget_Change__c.object
<CustomObject>
    <fields>
        <fullName>Budget_Type__c</fullName>
        <label>Budget Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Initial</fullName>
                </value>
                <value>
                    <fullName>Planned</fullName>
                </value>
                <value>
                    <fullName>Actual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Change_Date__c</fullName>
        <label>Change Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EECRM_Project_ref__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>EECRM Project</label>
        <referenceTo>EECRM_Project__c</referenceTo>
        <relationshipLabel>Project Budget Change</relationshipLabel>
        <relationshipName>Project_Budget_Change</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_Value__c</fullName>
        <label>New Value</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Old_Value__c</fullName>
        <label>Old Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Project Budget Change</label>
    <nameField>
        <displayFormat>PBC-{00000}</displayFormat>
        <label>Project Budget Changes Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Budget Change</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>